modify on favorite.html add schedule.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					</a>
 				</li>
 				<li>
-					<a class="btn" href="favorite.html">
+					<a class="btn" href="schedule.html">
 						<i class="icon-calendar"></i><br />
 						Schedule
 					</a>
