--- a/template.html
+++ b/template.html
@@ -19,7 +19,7 @@
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inside">
 				<div class="navbtn"><a class="btn btn-primary" href="index.html"><i class="icon-chevron-left icon-white"></i> Back</a></div>
-				<div class="navtitle"><p class="lead">Page Title</p></div>
+				<div class="navtitle"><p class="lead">Schedule</p></div>
 			</div>
 			
 		</div>
