--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 				<div class="form-multiple">
 					<div class="form-line">
 						<label class="float-left">From</label>
-						<input class="float-left input-medium" id="location-from" placeholder="From" type="text" />
+						<input class="float-left input-medium" id="location-from" placeholder="From" type="text" x-webkit-speech/>
 						<a class="btn float-left" href="#"><i class="icon-map-marker"> </i></a>
 					</div>
 					<div class="form-line">
 						<label class="float-left">To&nbsp;&nbsp;&nbsp;&nbsp;</label>
-						<input class="float-left input-medium" id="location-to" placeholder="Destination" type="text" />
+						<input class="float-left input-medium" id="location-to" placeholder="Destination" type="text" x-webkit-speech/>
 						<a class="btn float-left" id="favlist" href="#"><i class="icon-list"></i></a>
 					</div>
 					<div class="form-line timeinput bootstrap-timepicker" >
