ADD RIDER ALERT FUNCITON

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 	        			</script>
 	        			
 					</div>
+					<a href="searchresult.html">
 					<button class="btn searchbtn btn-large">Get Direction <i class="icon-search"></i></button>
+					</a>
 				</div>
 			</form>
 		</div>
@@ -52,7 +54,7 @@
 		<div id="indexnav">
 			<ul class="indexul">
 				<li>
-					<a class="btn" href="favorite.html">
+					<a class="btn" href="fares.html">
 						<i class="icon-info-sign"></i><br />
 						Fare 
 					</a>
@@ -69,6 +71,14 @@
 						Favorite
 					</a>
 				</li>
+			</ul>
+		</div>
+		
+		<div style="margin-top: 80px; border-top: 1px solid #DFDFDF;">
+			<h5 style="width: 280px; text-align: center;">Rider Alerts</h5>
+			<ul>
+				<li><a href="#">71C Detour</a></li>
+				<li><a href="#">Penn Avenue close for weather reason.</a></li>
 			</ul>
 		</div>
 	</body>
